# hello_component

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
command/: Cargo.toml
command/src/: main.rs
hello/: Cargo.toml
hello/src/: lib.rs
wit/: world.wit
