[package]
name = "command"
version = "0.1.0"
edition = "2021"

[package.metadata.component.target]
path = "../wit/world.wit"
world = "app"

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cargo-component-bindings = "0.5.0"
clap = { version = "4.3.19", features = ["derive"] }
